--- a/odpowiedzialnosc.html
+++ b/odpowiedzialnosc.html
@@ -17,7 +17,7 @@
         <li>nadzoruje przebieg meczów i prawidłowość zapisów</li>
         <li>w swoim egzemplarzu drabinki wpisuje wyniki</li>
     </ul>
-    <p>Kacper Wodziński, Daniel Sajnóg, Mikołaj Zmaczyński, Mateusz Piątkowski - ZAPLECZE TECHNICZNE</p>
+    <p>Kacper Wodziński, Daniel Sajnóg, Mikołaj Zmaczyński, Mateusz Piątkowski, Bartosz Jaszczyk, Alex Plusa - ZAPLECZE TECHNICZNE</p>
     <ul>
         <li>Pilnują ciszy i porządku w okolicach sali 110 w czasie turnieju</li>
         <li>na tablicy w sali 110 tworzą drabinkę zawodów</li>
