--- a/lotnicy.html
+++ b/lotnicy.html
@@ -16,12 +16,12 @@
             <th>Nazwisko</th>
         </tr>
         <tr>
-        <td>Bartłomiej</td>
+        <td>Antek</td>
         <td>Szymański (c)</td>
         </tr>
         <tr>
-        <td>Antek</td>
-        <td>Szymański</td>
+        <td>Dawid</td>
+        <td>Hernik</td>
         </tr>
     <tr>
         <td>Kacper</td>
