--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <tr>
                 <td>9</td>
                 <td><a href="lotnicy.html">Lotnicy</a></td>
-                <td>Bartłomiej</td>
+                <td>Antek</td>
                 <td>Szymański</td>
                 <td>✔️</td>
                 <td>2ES</td>
